# backtester

./: .gitignore  Makefile  backtester.py  fixed_betsize_bt.py  pyproject.toml  requirements.txt  vector_backtest.py
